# algo_owls_cli

./: .gitignore  Cargo.toml  README.md  hello.zig
demos/: fetch_demo.tape  git_demo.tape  init_demo.tape  list_demo.tape  owlgobanner  owlgobanner.tape  quest_demo.tape  review_demo.tape  run_demo.tape  stash_demo.tape
examples/: hello.adb  hello.hs  hello.ts  hello.zig
src/: main.rs  prog_lang.rs
src/common/: mod.rs  owl_error.rs
src/owl_core/: add_subcommand.rs  clear_subcommand.rs  fetch_subcommand.rs  git_subcommand.rs  mod.rs  push_subcommand.rs  quest_subcommand.rs  remote_subcommand.rs  review_subcommand.rs  run_subcommand.rs  show_subcommand.rs  stash_subcommand.rs  sync_subcommand.rs  test_subcommand.rs
src/owl_utils/: cmd_utils.rs  fs_utils.rs  llm_utils.rs  mod.rs  owl_error.rs  prog_lang.rs  prog_utils.rs
src/owl_utils/cmd/: cmd_utils.rs  git_utils.rs  mod.rs  prog_utils.rs
src/owl_utils/fs/: fs_utils.rs  mod.rs  toml_utils.rs  uri.rs
src/owl_utils/llm/: llm_utils.rs  mod.rs
src/owl_utils/tui/: mod.rs  tui_markdown.rs  tui_utils.rs
