[package]
name = "owlgo"
version = "0.1.3"
authors = ["LateNiteCode <latenitecode@gmail.com>"]
repository = "https://github.com/latenitecoding/algo_owls_cli"
keywords = ["cp", "competitive", "programming", "icpc", "usaco"]
license-file = "LICENSE"
readme = "README.md"
description = "A lightweight CLI to assist in solving CP problems"
edition = "2024"

[dependencies]
anthropic-sdk-rust = "0.1.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
tokio = "1.48.0"
toml_edit = "0.23.7"
zip = "6.0.0"
