[package]
name = "owlgo"
version = "0.1.5"
authors = ["LateNiteCode <latenitecode@gmail.com>"]
repository = "https://github.com/latenitecoding/algo_owls_cli"
keywords = ["cp", "competitive", "programming", "icpc", "usaco"]
license-file = "LICENSE"
readme = "README.md"
description = "A lightweight CLI to assist in solving CP problems"
edition = "2024"

[dependencies]
ansi-to-tui = "7.0.0"
anthropic-sdk-rust = "0.1.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
itertools = "0.14.0"
pulldown-cmark = "0.13.0"
rand = "0.9.2"
ratatui = "0.29.0"
ratatui-explorer = "0.2.1"
reqwest = { version = "0.12.24", features = ["blocking"] }
syntect = "5.3.0"
tokio = { version = "1.48.0", features = ["full"] }
toml_edit = "0.23.7"
tui-textarea = "0.7.0"
url = "2.5.7"
zip = "6.0.0"
